--- a/z80.html
+++ b/z80.html
@@ -1799,7 +1799,7 @@
 	}
 
 	function scrollToElement(element) {
-		element.scrollIntoView({ block: 'start', behavior: 'smooth' });
+		element.scrollIntoView();
 	}
 
 	function findMatchingTable(str) {
