Switch from `hx` to `ixh` form for 8-bit index registers
(I find them easier to read in this form)

--- a/z80.html
+++ b/z80.html
@@ -401,11 +401,11 @@
 <tr><td>	<b>adc</b> a,d		</td><td>	1	</td><td>	8a		</td></tr>
 <tr><td>	<b>adc</b> a,e		</td><td>	1	</td><td>	8b		</td></tr>
 <tr><td>	<b>adc</b> a,h		</td><td>	1	</td><td>	8c		</td></tr>
-<tr><td>	<b>adc</b> a,hx	</td><td>	2	</td><td>	dd 8c		</td></tr>
-<tr><td>	<b>adc</b> a,hy	</td><td>	2	</td><td>	fd 8c		</td></tr>
+<tr><td>	<b>adc</b> a,ixh	</td><td>	2	</td><td>	dd 8c		</td></tr>
+<tr><td>	<b>adc</b> a,iyh	</td><td>	2	</td><td>	fd 8c		</td></tr>
 <tr><td>	<b>adc</b> a,l		</td><td>	1	</td><td>	8d		</td></tr>
-<tr><td>	<b>adc</b> a,lx	</td><td>	2	</td><td>	dd 8d		</td></tr>
-<tr><td>	<b>adc</b> a,ly	</td><td>	2	</td><td>	fd 8d		</td></tr>
+<tr><td>	<b>adc</b> a,ixl	</td><td>	2	</td><td>	dd 8d		</td></tr>
+<tr><td>	<b>adc</b> a,iyl	</td><td>	2	</td><td>	fd 8d		</td></tr>
 <tr><td>	<b>adc</b> a,nn	</td><td>	2	</td><td>	ce nn		</td></tr>
 <tr><td>	<b>adc</b> hl,bc	</td><td>	4	</td><td>	ed 4a		</td></tr>
 <tr><td>	<b>adc</b> hl,de	</td><td>	4	</td><td>	ed 5a		</td></tr>
@@ -429,11 +429,11 @@
 <tr><td>	<b>add</b> a,d		</td><td>	1	</td><td>	82		</td></tr>
 <tr><td>	<b>add</b> a,e		</td><td>	1	</td><td>	83		</td></tr>
 <tr><td>	<b>add</b> a,h		</td><td>	1	</td><td>	84		</td></tr>
-<tr><td>	<b>add</b> a,hx	</td><td>	2	</td><td>	dd 84		</td></tr>
-<tr><td>	<b>add</b> a,hy	</td><td>	2	</td><td>	fd 84		</td></tr>
+<tr><td>	<b>add</b> a,ixh	</td><td>	2	</td><td>	dd 84		</td></tr>
+<tr><td>	<b>add</b> a,iyh	</td><td>	2	</td><td>	fd 84		</td></tr>
 <tr><td>	<b>add</b> a,l		</td><td>	1	</td><td>	85		</td></tr>
-<tr><td>	<b>add</b> a,lx	</td><td>	2	</td><td>	dd 85		</td></tr>
-<tr><td>	<b>add</b> a,ly	</td><td>	2	</td><td>	fd 85		</td></tr>
+<tr><td>	<b>add</b> a,ixl	</td><td>	2	</td><td>	dd 85		</td></tr>
+<tr><td>	<b>add</b> a,iyl	</td><td>	2	</td><td>	fd 85		</td></tr>
 <tr><td>	<b>add</b> a,nn	</td><td>	2	</td><td>	c6 nn		</td></tr>
 <tr><td>	<b>add</b> hl,bc	</td><td>	3	</td><td>	09		</td></tr>
 <tr><td>	<b>add</b> hl,de	</td><td>	3	</td><td>	19		</td></tr>
@@ -465,11 +465,11 @@
 <tr><td>	<b>and</b> d		</td><td>	1	</td><td>	a2		</td></tr>
 <tr><td>	<b>and</b> e		</td><td>	1	</td><td>	a3		</td></tr>
 <tr><td>	<b>and</b> h		</td><td>	1	</td><td>	a4		</td></tr>
-<tr><td>	<b>and</b> hx		</td><td>	2	</td><td>	dd a4		</td></tr>
-<tr><td>	<b>and</b> hy		</td><td>	2	</td><td>	fd a4		</td></tr>
+<tr><td>	<b>and</b> ixh		</td><td>	2	</td><td>	dd a4		</td></tr>
+<tr><td>	<b>and</b> iyh		</td><td>	2	</td><td>	fd a4		</td></tr>
 <tr><td>	<b>and</b> l		</td><td>	1	</td><td>	a5		</td></tr>
-<tr><td>	<b>and</b> lx		</td><td>	2	</td><td>	dd a5		</td></tr>
-<tr><td>	<b>and</b> ly		</td><td>	2	</td><td>	fd a5		</td></tr>
+<tr><td>	<b>and</b> ixl		</td><td>	2	</td><td>	dd a5		</td></tr>
+<tr><td>	<b>and</b> iyl		</td><td>	2	</td><td>	fd a5		</td></tr>
 <tr><td>	<b>and</b> nn		</td><td>	2	</td><td>	e6 nn		</td></tr>
 </tbody>
 </table>
@@ -688,14 +688,14 @@
 <tr><td>	<b>dec</b> de		</td><td>	2	</td><td>	1b		</td></tr>
 <tr><td>	<b>dec</b> e		</td><td>	1	</td><td>	1d		</td></tr>
 <tr><td>	<b>dec</b> h		</td><td>	1	</td><td>	25		</td></tr>
-<tr><td>	<b>dec</b> hx		</td><td>	2	</td><td>	dd 25		</td></tr>
-<tr><td>	<b>dec</b> hy		</td><td>	2	</td><td>	fd 25		</td></tr>
+<tr><td>	<b>dec</b> ixh		</td><td>	2	</td><td>	dd 25		</td></tr>
+<tr><td>	<b>dec</b> iyh		</td><td>	2	</td><td>	fd 25		</td></tr>
 <tr><td>	<b>dec</b> hl		</td><td>	2	</td><td>	2b		</td></tr>
 <tr><td>	<b>dec</b> ix		</td><td>	3	</td><td>	dd 2b		</td></tr>
 <tr><td>	<b>dec</b> iy		</td><td>	3	</td><td>	fd 2b		</td></tr>
 <tr><td>	<b>dec</b> l		</td><td>	1	</td><td>	2d		</td></tr>
-<tr><td>	<b>dec</b> lx		</td><td>	2	</td><td>	dd 2d		</td></tr>
-<tr><td>	<b>dec</b> ly		</td><td>	2	</td><td>	fd 2d		</td></tr>
+<tr><td>	<b>dec</b> ixl		</td><td>	2	</td><td>	dd 2d		</td></tr>
+<tr><td>	<b>dec</b> iyl		</td><td>	2	</td><td>	fd 2d		</td></tr>
 <tr><td>	<b>dec</b> sp		</td><td>	2	</td><td>	3b		</td></tr>
 </tbody>
 </table>
@@ -811,14 +811,14 @@
 <tr><td>	<b>inc</b> de		</td><td>	2	</td><td>	13		</td></tr>
 <tr><td>	<b>inc</b> e		</td><td>	1	</td><td>	1c		</td></tr>
 <tr><td>	<b>inc</b> h		</td><td>	1	</td><td>	24		</td></tr>
-<tr><td>	<b>inc</b> hx		</td><td>	2	</td><td>	dd 24		</td></tr>
-<tr><td>	<b>inc</b> hy		</td><td>	2	</td><td>	fd 24		</td></tr>
+<tr><td>	<b>inc</b> ixh		</td><td>	2	</td><td>	dd 24		</td></tr>
+<tr><td>	<b>inc</b> iyh		</td><td>	2	</td><td>	fd 24		</td></tr>
 <tr><td>	<b>inc</b> hl		</td><td>	2	</td><td>	23		</td></tr>
 <tr><td>	<b>inc</b> ix		</td><td>	3	</td><td>	dd 23		</td></tr>
 <tr><td>	<b>inc</b> iy		</td><td>	3	</td><td>	fd 23		</td></tr>
 <tr><td>	<b>inc</b> l		</td><td>	1	</td><td>	2c		</td></tr>
-<tr><td>	<b>inc</b> lx		</td><td>	2	</td><td>	dd 2c		</td></tr>
-<tr><td>	<b>inc</b> ly		</td><td>	2	</td><td>	fd 2c		</td></tr>
+<tr><td>	<b>inc</b> ixl		</td><td>	2	</td><td>	dd 2c		</td></tr>
+<tr><td>	<b>inc</b> iyl		</td><td>	2	</td><td>	fd 2c		</td></tr>
 <tr><td>	<b>inc</b> sp		</td><td>	2	</td><td>	33		</td></tr>
 </tbody>
 </table>
@@ -949,12 +949,12 @@
 <tr><td>	<b>ld</b> a,d		</td><td>	1	</td><td>	7a		</td></tr>
 <tr><td>	<b>ld</b> a,e		</td><td>	1	</td><td>	7b		</td></tr>
 <tr><td>	<b>ld</b> a,h		</td><td>	1	</td><td>	7c		</td></tr>
-<tr><td>	<b>ld</b> a,hx		</td><td>	2	</td><td>	dd 7c		</td></tr>
-<tr><td>	<b>ld</b> a,hy		</td><td>	2	</td><td>	fd 7c		</td></tr>
+<tr><td>	<b>ld</b> a,ixh		</td><td>	2	</td><td>	dd 7c		</td></tr>
+<tr><td>	<b>ld</b> a,iyh		</td><td>	2	</td><td>	fd 7c		</td></tr>
 <tr><td>	<b>ld</b> a,i		</td><td>	3	</td><td>	ed 57		</td></tr>
 <tr><td>	<b>ld</b> a,l		</td><td>	1	</td><td>	7d		</td></tr>
-<tr><td>	<b>ld</b> a,lx		</td><td>	2	</td><td>	dd 7d		</td></tr>
-<tr><td>	<b>ld</b> a,ly		</td><td>	2	</td><td>	fd 7d		</td></tr>
+<tr><td>	<b>ld</b> a,ixl		</td><td>	2	</td><td>	dd 7d		</td></tr>
+<tr><td>	<b>ld</b> a,iyl		</td><td>	2	</td><td>	fd 7d		</td></tr>
 <tr><td>	<b>ld</b> a,nn		</td><td>	2	</td><td>	3e nn		</td></tr>
 <tr><td>	<b>ld</b> a,r		</td><td>	3	</td><td>	ed 5f		</td></tr>
 <tr><td>	<b>ld</b> b,(hl)	</td><td>	2	</td><td>	46		</td></tr>
@@ -966,11 +966,11 @@
 <tr><td>	<b>ld</b> b,d		</td><td>	1	</td><td>	42		</td></tr>
 <tr><td>	<b>ld</b> b,e		</td><td>	1	</td><td>	43		</td></tr>
 <tr><td>	<b>ld</b> b,h		</td><td>	1	</td><td>	44		</td></tr>
-<tr><td>	<b>ld</b> b,hx		</td><td>	2	</td><td>	dd 44		</td></tr>
-<tr><td>	<b>ld</b> b,hy		</td><td>	2	</td><td>	fd 44		</td></tr>
+<tr><td>	<b>ld</b> b,ixh		</td><td>	2	</td><td>	dd 44		</td></tr>
+<tr><td>	<b>ld</b> b,iyh		</td><td>	2	</td><td>	fd 44		</td></tr>
 <tr><td>	<b>ld</b> b,l		</td><td>	1	</td><td>	45		</td></tr>
-<tr><td>	<b>ld</b> b,lx		</td><td>	2	</td><td>	dd 45		</td></tr>
-<tr><td>	<b>ld</b> b,ly		</td><td>	2	</td><td>	fd 45		</td></tr>
+<tr><td>	<b>ld</b> b,ixl		</td><td>	2	</td><td>	dd 45		</td></tr>
+<tr><td>	<b>ld</b> b,iyl		</td><td>	2	</td><td>	fd 45		</td></tr>
 <tr><td>	<b>ld</b> b,nn		</td><td>	2	</td><td>	06 nn		</td></tr>
 <tr><td>	<b>ld</b> bc,(nnnn)	</td><td>	6	</td><td>	ed 4b nn nn	</td></tr>
 <tr><td>	<b>ld</b> bc,nnnn	</td><td>	3	</td><td>	01 nn nn	</td></tr>
@@ -983,11 +983,11 @@
 <tr><td>	<b>ld</b> c,d		</td><td>	1	</td><td>	4a		</td></tr>
 <tr><td>	<b>ld</b> c,e		</td><td>	1	</td><td>	4b		</td></tr>
 <tr><td>	<b>ld</b> c,h		</td><td>	1	</td><td>	4c		</td></tr>
-<tr><td>	<b>ld</b> c,hx		</td><td>	2	</td><td>	dd 4c		</td></tr>
-<tr><td>	<b>ld</b> c,hy		</td><td>	2	</td><td>	fd 4c		</td></tr>
+<tr><td>	<b>ld</b> c,ixh		</td><td>	2	</td><td>	dd 4c		</td></tr>
+<tr><td>	<b>ld</b> c,iyh		</td><td>	2	</td><td>	fd 4c		</td></tr>
 <tr><td>	<b>ld</b> c,l		</td><td>	1	</td><td>	4d		</td></tr>
-<tr><td>	<b>ld</b> c,lx		</td><td>	2	</td><td>	dd 4d		</td></tr>
-<tr><td>	<b>ld</b> c,ly		</td><td>	2	</td><td>	fd 4d		</td></tr>
+<tr><td>	<b>ld</b> c,ixl		</td><td>	2	</td><td>	dd 4d		</td></tr>
+<tr><td>	<b>ld</b> c,iyl		</td><td>	2	</td><td>	fd 4d		</td></tr>
 <tr><td>	<b>ld</b> c,nn		</td><td>	2	</td><td>	0e nn		</td></tr>
 <tr><td>	<b>ld</b> d,(hl)	</td><td>	2	</td><td>	56		</td></tr>
 <tr><td>	<b>ld</b> d,(ix+nn)	</td><td>	5	</td><td>	dd 56 nn	</td></tr>
@@ -998,11 +998,11 @@
 <tr><td>	<b>ld</b> d,d		</td><td>	1	</td><td>	52		</td></tr>
 <tr><td>	<b>ld</b> d,e		</td><td>	1	</td><td>	53		</td></tr>
 <tr><td>	<b>ld</b> d,h		</td><td>	1	</td><td>	54		</td></tr>
-<tr><td>	<b>ld</b> d,hx		</td><td>	2	</td><td>	dd 54		</td></tr>
-<tr><td>	<b>ld</b> d,hy		</td><td>	2	</td><td>	fd 54		</td></tr>
+<tr><td>	<b>ld</b> d,ixh		</td><td>	2	</td><td>	dd 54		</td></tr>
+<tr><td>	<b>ld</b> d,iyh		</td><td>	2	</td><td>	fd 54		</td></tr>
 <tr><td>	<b>ld</b> d,l		</td><td>	1	</td><td>	55		</td></tr>
-<tr><td>	<b>ld</b> d,lx		</td><td>	2	</td><td>	dd 55		</td></tr>
-<tr><td>	<b>ld</b> d,ly		</td><td>	2	</td><td>	fd 55		</td></tr>
+<tr><td>	<b>ld</b> d,ixl		</td><td>	2	</td><td>	dd 55		</td></tr>
+<tr><td>	<b>ld</b> d,iyl		</td><td>	2	</td><td>	fd 55		</td></tr>
 <tr><td>	<b>ld</b> d,nn		</td><td>	2	</td><td>	16 nn		</td></tr>
 <tr><td>	<b>ld</b> de,(nnnn)	</td><td>	6	</td><td>	ed 5b nn nn	</td></tr>
 <tr><td>	<b>ld</b> de,nnnn	</td><td>	3	</td><td>	11 nn nn	</td></tr>
@@ -1015,11 +1015,11 @@
 <tr><td>	<b>ld</b> e,d		</td><td>	1	</td><td>	5a		</td></tr>
 <tr><td>	<b>ld</b> e,e		</td><td>	1	</td><td>	5b		</td></tr>
 <tr><td>	<b>ld</b> e,h		</td><td>	1	</td><td>	5c		</td></tr>
-<tr><td>	<b>ld</b> e,hx		</td><td>	2	</td><td>	dd 5c		</td></tr>
-<tr><td>	<b>ld</b> e,hy		</td><td>	2	</td><td>	fd 5c		</td></tr>
+<tr><td>	<b>ld</b> e,ixh		</td><td>	2	</td><td>	dd 5c		</td></tr>
+<tr><td>	<b>ld</b> e,iyh		</td><td>	2	</td><td>	fd 5c		</td></tr>
 <tr><td>	<b>ld</b> e,l		</td><td>	1	</td><td>	5d		</td></tr>
-<tr><td>	<b>ld</b> e,lx		</td><td>	2	</td><td>	dd 5d		</td></tr>
-<tr><td>	<b>ld</b> e,ly		</td><td>	2	</td><td>	fd 5d		</td></tr>
+<tr><td>	<b>ld</b> e,ixl		</td><td>	2	</td><td>	dd 5d		</td></tr>
+<tr><td>	<b>ld</b> e,iyl		</td><td>	2	</td><td>	fd 5d		</td></tr>
 <tr><td>	<b>ld</b> e,nn		</td><td>	2	</td><td>	1e nn		</td></tr>
 <tr><td>	<b>ld</b> h,(hl)	</td><td>	2	</td><td>	66		</td></tr>
 <tr><td>	<b>ld</b> h,(ix+nn)	</td><td>	5	</td><td>	dd 66 nn	</td></tr>
@@ -1032,18 +1032,18 @@
 <tr><td>	<b>ld</b> h,h		</td><td>	1	</td><td>	64		</td></tr>
 <tr><td>	<b>ld</b> h,l		</td><td>	1	</td><td>	65		</td></tr>
 <tr><td>	<b>ld</b> h,nn		</td><td>	2	</td><td>	26 nn		</td></tr>
-<tr><td>	<b>ld</b> hx,a		</td><td>	2	</td><td>	dd 67		</td></tr>
-<tr><td>	<b>ld</b> hx,b		</td><td>	2	</td><td>	dd 60		</td></tr>
-<tr><td>	<b>ld</b> hx,c		</td><td>	2	</td><td>	dd 61		</td></tr>
-<tr><td>	<b>ld</b> hx,d		</td><td>	2	</td><td>	dd 62		</td></tr>
-<tr><td>	<b>ld</b> hx,e		</td><td>	2	</td><td>	dd 63		</td></tr>
-<tr><td>	<b>ld</b> hx,nn	</td><td>	3	</td><td>	dd 26 nn	</td></tr>
-<tr><td>	<b>ld</b> hy,a		</td><td>	2	</td><td>	fd 67		</td></tr>
-<tr><td>	<b>ld</b> hy,b		</td><td>	2	</td><td>	fd 60		</td></tr>
-<tr><td>	<b>ld</b> hy,c		</td><td>	2	</td><td>	fd 61		</td></tr>
-<tr><td>	<b>ld</b> hy,d		</td><td>	2	</td><td>	fd 62		</td></tr>
-<tr><td>	<b>ld</b> hy,e		</td><td>	2	</td><td>	fd 63		</td></tr>
-<tr><td>	<b>ld</b> hy,nn	</td><td>	3	</td><td>	fd 26 nn	</td></tr>
+<tr><td>	<b>ld</b> ixh,a		</td><td>	2	</td><td>	dd 67		</td></tr>
+<tr><td>	<b>ld</b> ixh,b		</td><td>	2	</td><td>	dd 60		</td></tr>
+<tr><td>	<b>ld</b> ixh,c		</td><td>	2	</td><td>	dd 61		</td></tr>
+<tr><td>	<b>ld</b> ixh,d		</td><td>	2	</td><td>	dd 62		</td></tr>
+<tr><td>	<b>ld</b> ixh,e		</td><td>	2	</td><td>	dd 63		</td></tr>
+<tr><td>	<b>ld</b> ixh,nn	</td><td>	3	</td><td>	dd 26 nn	</td></tr>
+<tr><td>	<b>ld</b> iyh,a		</td><td>	2	</td><td>	fd 67		</td></tr>
+<tr><td>	<b>ld</b> iyh,b		</td><td>	2	</td><td>	fd 60		</td></tr>
+<tr><td>	<b>ld</b> iyh,c		</td><td>	2	</td><td>	fd 61		</td></tr>
+<tr><td>	<b>ld</b> iyh,d		</td><td>	2	</td><td>	fd 62		</td></tr>
+<tr><td>	<b>ld</b> iyh,e		</td><td>	2	</td><td>	fd 63		</td></tr>
+<tr><td>	<b>ld</b> iyh,nn	</td><td>	3	</td><td>	fd 26 nn	</td></tr>
 <tr><td>	<b>ld</b> hl,(nnnn)	</td><td>	5	</td><td>	2a nn nn	</td></tr>
 <tr><td>	<b>ld</b> hl,nnnn	</td><td>	3	</td><td>	21 nn nn	</td></tr>
 <tr><td>	<b>ld</b> i,a		</td><td>	5	</td><td>	ed 47		</td></tr>
@@ -1062,18 +1062,18 @@
 <tr><td>	<b>ld</b> l,h		</td><td>	1	</td><td>	6c		</td></tr>
 <tr><td>	<b>ld</b> l,l		</td><td>	1	</td><td>	6d		</td></tr>
 <tr><td>	<b>ld</b> l,nn		</td><td>	2	</td><td>	2e nn		</td></tr>
-<tr><td>	<b>ld</b> lx,a		</td><td>	2	</td><td>	dd 6f		</td></tr>
-<tr><td>	<b>ld</b> lx,b		</td><td>	2	</td><td>	dd 68		</td></tr>
-<tr><td>	<b>ld</b> lx,c		</td><td>	2	</td><td>	dd 69		</td></tr>
-<tr><td>	<b>ld</b> lx,d		</td><td>	2	</td><td>	dd 6a		</td></tr>
-<tr><td>	<b>ld</b> lx,e		</td><td>	2	</td><td>	dd 6b		</td></tr>
-<tr><td>	<b>ld</b> lx,nn	</td><td>	3	</td><td>	dd 2e nn	</td></tr>
-<tr><td>	<b>ld</b> ly,a		</td><td>	2	</td><td>	fd 6f		</td></tr>
-<tr><td>	<b>ld</b> ly,b		</td><td>	2	</td><td>	fd 68		</td></tr>
-<tr><td>	<b>ld</b> ly,c		</td><td>	2	</td><td>	fd 69		</td></tr>
-<tr><td>	<b>ld</b> ly,d		</td><td>	2	</td><td>	fd 6a		</td></tr>
-<tr><td>	<b>ld</b> ly,e		</td><td>	2	</td><td>	fd 6b		</td></tr>
-<tr><td>	<b>ld</b> ly,nn	</td><td>	3	</td><td>	fd 2e nn	</td></tr>
+<tr><td>	<b>ld</b> ixl,a		</td><td>	2	</td><td>	dd 6f		</td></tr>
+<tr><td>	<b>ld</b> ixl,b		</td><td>	2	</td><td>	dd 68		</td></tr>
+<tr><td>	<b>ld</b> ixl,c		</td><td>	2	</td><td>	dd 69		</td></tr>
+<tr><td>	<b>ld</b> ixl,d		</td><td>	2	</td><td>	dd 6a		</td></tr>
+<tr><td>	<b>ld</b> ixl,e		</td><td>	2	</td><td>	dd 6b		</td></tr>
+<tr><td>	<b>ld</b> ixl,nn	</td><td>	3	</td><td>	dd 2e nn	</td></tr>
+<tr><td>	<b>ld</b> iyl,a		</td><td>	2	</td><td>	fd 6f		</td></tr>
+<tr><td>	<b>ld</b> iyl,b		</td><td>	2	</td><td>	fd 68		</td></tr>
+<tr><td>	<b>ld</b> iyl,c		</td><td>	2	</td><td>	fd 69		</td></tr>
+<tr><td>	<b>ld</b> iyl,d		</td><td>	2	</td><td>	fd 6a		</td></tr>
+<tr><td>	<b>ld</b> iyl,e		</td><td>	2	</td><td>	fd 6b		</td></tr>
+<tr><td>	<b>ld</b> iyl,nn	</td><td>	3	</td><td>	fd 2e nn	</td></tr>
 <tr><td>	<b>ld</b> r,a		</td><td>	3	</td><td>	ed 4f		</td></tr>
 <tr><td>	<b>ld</b> sp,(nnnn)	</td><td>	6	</td><td>	ed 7b nn nn	</td></tr>
 <tr><td>	<b>ld</b> sp,hl	</td><td>	2	</td><td>	f9		</td></tr>
@@ -1158,11 +1158,11 @@
 <tr><td>	<b>or</b> d		</td><td>	1	</td><td>	b2		</td></tr>
 <tr><td>	<b>or</b> e		</td><td>	1	</td><td>	b3		</td></tr>
 <tr><td>	<b>or</b> h		</td><td>	1	</td><td>	b4		</td></tr>
-<tr><td>	<b>or</b> hx		</td><td>	2	</td><td>	dd b4		</td></tr>
-<tr><td>	<b>or</b> hy		</td><td>	2	</td><td>	fd b4		</td></tr>
+<tr><td>	<b>or</b> ixh		</td><td>	2	</td><td>	dd b4		</td></tr>
+<tr><td>	<b>or</b> iyh		</td><td>	2	</td><td>	fd b4		</td></tr>
 <tr><td>	<b>or</b> l		</td><td>	1	</td><td>	b5		</td></tr>
-<tr><td>	<b>or</b> lx		</td><td>	2	</td><td>	dd b5		</td></tr>
-<tr><td>	<b>or</b> ly		</td><td>	2	</td><td>	fd b5		</td></tr>
+<tr><td>	<b>or</b> ixl		</td><td>	2	</td><td>	dd b5		</td></tr>
+<tr><td>	<b>or</b> iyl		</td><td>	2	</td><td>	fd b5		</td></tr>
 <tr><td>	<b>or</b> nn		</td><td>	2	</td><td>	f6 nn		</td></tr>
 </tbody>
 </table>
@@ -1615,11 +1615,11 @@
 <tr><td>	<b>sbc</b> a,d		</td><td>	1	</td><td>	9a		</td></tr>
 <tr><td>	<b>sbc</b> a,e		</td><td>	1	</td><td>	9b		</td></tr>
 <tr><td>	<b>sbc</b> a,h		</td><td>	1	</td><td>	9c		</td></tr>
-<tr><td>	<b>sbc</b> a,hx		</td><td>	2	</td><td>	dd 9c		</td></tr>
-<tr><td>	<b>sbc</b> a,hy		</td><td>	2	</td><td>	fd 9c		</td></tr>
+<tr><td>	<b>sbc</b> a,ixh		</td><td>	2	</td><td>	dd 9c		</td></tr>
+<tr><td>	<b>sbc</b> a,iyh		</td><td>	2	</td><td>	fd 9c		</td></tr>
 <tr><td>	<b>sbc</b> a,l		</td><td>	1	</td><td>	9d		</td></tr>
-<tr><td>	<b>sbc</b> a,lx		</td><td>	2	</td><td>	dd 9d		</td></tr>
-<tr><td>	<b>sbc</b> a,ly		</td><td>	2	</td><td>	fc 9d		</td></tr>
+<tr><td>	<b>sbc</b> a,ixl	</td><td>	2	</td><td>	dd 9d		</td></tr>
+<tr><td>	<b>sbc</b> a,iyl	</td><td>	2	</td><td>	fc 9d		</td></tr>
 <tr><td>	<b>sbc</b> a,nn		</td><td>	2	</td><td>	de nn		</td></tr>
 <tr><td>	<b>sbc</b> hl,bc	</td><td>	4	</td><td>	ed 42		</td></tr>
 <tr><td>	<b>sbc</b> hl,de	</td><td>	4	</td><td>	ed 52		</td></tr>
@@ -1842,11 +1842,11 @@
 <tr><td>	<b>sub</b> d		</td><td>	1	</td><td>	92		</td></tr>
 <tr><td>	<b>sub</b> e		</td><td>	1	</td><td>	93		</td></tr>
 <tr><td>	<b>sub</b> h		</td><td>	1	</td><td>	94		</td></tr>
-<tr><td>	<b>sub</b> hx		</td><td>	2	</td><td>	ff 94		</td></tr>
-<tr><td>	<b>sub</b> hy		</td><td>	2	</td><td>	fd 94		</td></tr>
+<tr><td>	<b>sub</b> ixh		</td><td>	2	</td><td>	ff 94		</td></tr>
+<tr><td>	<b>sub</b> iyh		</td><td>	2	</td><td>	fd 94		</td></tr>
 <tr><td>	<b>sub</b> l		</td><td>	1	</td><td>	95		</td></tr>
-<tr><td>	<b>sub</b> lx		</td><td>	2	</td><td>	ff 95		</td></tr>
-<tr><td>	<b>sub</b> ly		</td><td>	2	</td><td>	fd 95		</td></tr>
+<tr><td>	<b>sub</b> ixl		</td><td>	2	</td><td>	ff 95		</td></tr>
+<tr><td>	<b>sub</b> iyl		</td><td>	2	</td><td>	fd 95		</td></tr>
 <tr><td>	<b>sub</b> nn		</td><td>	2	</td><td>	d6 nn		</td></tr>
 </tbody>
 </table>
@@ -1866,11 +1866,11 @@
 <tr><td>	<b>xor</b> d		</td><td>	1	</td><td>	aa		</td></tr>
 <tr><td>	<b>xor</b> e		</td><td>	1	</td><td>	ab		</td></tr>
 <tr><td>	<b>xor</b> h		</td><td>	1	</td><td>	ac		</td></tr>
-<tr><td>	<b>xor</b> hx		</td><td>	2	</td><td>	dd ac		</td></tr>
-<tr><td>	<b>xor</b> hy		</td><td>	2	</td><td>	fd ac		</td></tr>
+<tr><td>	<b>xor</b> ixh		</td><td>	2	</td><td>	dd ac		</td></tr>
+<tr><td>	<b>xor</b> iyh		</td><td>	2	</td><td>	fd ac		</td></tr>
 <tr><td>	<b>xor</b> l		</td><td>	1	</td><td>	ad		</td></tr>
-<tr><td>	<b>xor</b> lx		</td><td>	2	</td><td>	dd ad		</td></tr>
-<tr><td>	<b>xor</b> ly		</td><td>	2	</td><td>	fd ad		</td></tr>
+<tr><td>	<b>xor</b> ixl		</td><td>	2	</td><td>	dd ad		</td></tr>
+<tr><td>	<b>xor</b> iyl		</td><td>	2	</td><td>	fd ad		</td></tr>
 <tr><td>	<b>xor</b> nn		</td><td>	2	</td><td>	ee nn		</td></tr>
 </tbody>
 </table>
